<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ListOffresActivity"
    android:orientation="vertical"
    android:background="@drawable/bg_list_offres">

    <LinearLayout
        android:id="@+id/layout_titre"
        android:layout_width="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="20dp"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/retourDeListeOffresAMain"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/left_arrow"
            android:scaleType="fitCenter"
            android:background="#00000000"
            android:layout_gravity="center"
            android:contentDescription="@string/bouton_retour" />

        <TextView
            android:id="@+id/offres_disponibles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/offres_disponibles"
            android:textSize="@dimen/textSize_title"
            android:textStyle="bold"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="400dp">

        <ListView
            android:id="@+id/offres_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="10dp"
            android:orientation="vertical"
            android:divider="@null"
            android:dividerHeight="15dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonPrec"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:text="@string/precedent" />

        <TextView
            android:id="@+id/indic_page"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:text="@string/NumpageSurnbPage"
            android:layout_marginEnd="20dp" />

        <Button
            android:id="@+id/buttonNext"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/suivant" />

    </LinearLayout>


</LinearLayout>