<resources>
    <string name="app_name">SaeProjet</string>
    <string name="prompt_login">Login</string>
    <string name="prompt_password">Mot de passe</string>
    <string name="action_sign_in1">Suivant</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="token_key">token key</string>
    <string name="login_key">login key</string>
    <string name="login_id_key">login id key</string>
    <string name="login_id_path">login id path</string>
    <string name="offre_url">www.offre.net</string>
    <string name="titrelogin">Mon carnet de suivi de recherche de stage</string>
    <string name="candidatures_refusees">%1d candidature.s refusée.s</string>
    <string name="candidatures_en_cours">%1d candidature.s en cours</string>
    <string name="candidatures">%1d Candidature.s</string>
    <string name="details">Voir en détails</string>
    <string name="offres_retenues">%1d offre.s retenue.s</string>
    <string name="offres_consultees">%1d offre.s consultée.s</string>
    <string name="offres">%1d Offres disponibles</string>
    <string name="derniere_connexion">Dernière connexion le %1s</string>
    <string name="date_placeholder">date_placeholder</string>
    <string name="prenom">Bienvenue\n%1s</string>
    <string name="title_activity_liste_offres">Offres</string>
    <string name="offres_disponibles">%1d Offres disponibles</string>
    <string name="bouton_retour">bouton retour</string>
    <string name="stringConnect">Connectez vous !</string>
    <string name="stringSignIn">Connexion</string>

    <string-array name="etats_candidatures">
        <item>Candidature à envoyer</item>
        <item>En attente de réponse</item>
        <item>En attente de RDV</item>
        <item>Entretien à réaliser</item>
        <item>Candidature refusée</item>
        <item>Candidature acceptée</item>
    </string-array>

    <string name="suivant"><![CDATA[Suivant >]]></string>
    <string name="precedent"><![CDATA[< Précédent]]></string>
    <string name="chevron"><![CDATA[>]]></string>
    <string name="NumpageSurnbPage">%1d / %2d</string>
    <string name="liste_offres">Offres</string>
    <string name="save_update_offer">Sauvegarder</string>
    <string name="cancel_update_offer">Annuler</string>
    <string name="mettre_jour">Mettre à jour</string>
    <string name="abandonner_la_candidature">Abandonner la candidature</string>
    <string name="etat_de_la_candidature">État de la candidature</string>
    <string name="entreprise"><u>Entreprise :</u></string>
    <string name="ville"><u>Ville :</u></string>
    <string name="candidater">Candidater</string>
    <string name="etat">État :</string>
    <string name="titre_offre">Titre offre</string>
    <string name="candidaturestitre">Candidatures</string>
    <string name="candidatures_acceptees_list">Candidatures acceptées</string>
    <string name="candidatures_refusees_list">Candidatures refusées</string>
    <string name="candidatures_en_cours_list">Candidatures en cours</string>
    <string name="aucune_candidature_acceptee">Aucune candidature acceptée</string>
    <string name="aucune_candidature_en_cours">Aucune candidature en cours</string>
    <string name="aucune_candidature_refusee">Aucune candidature refusée</string>
    <string name="non_renseigne">Non renseigné</string>
    <string name="url"><u>URL :</u></string>
    <string name="statut">Statut :</string>
    <string name="candidatures_acceptees">%1d candidature.s acceptée.s</string>
    <string name="retour">Retour</string>
    <string name="titre_offre_placeholder">Titre offre</string>
    <string name="date_de_relance">Date de relance</string>
    <string name="date">date</string>
    <string name="etat_placeholder">etat_placeholder</string>

</resources>