...
        android:background="@drawable/bg_item"
        android:layout_marginTop="60dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp">

        <TextView
            android:id="@+id/intitule"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:text="@string/titre_offre_placeholder"
...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingTop="50dp">

        <Button
            android:id="@+id/mettreajour"
            android:layout_width="170dp"
            android:layout_height="60dp"
            android:text="@string/mettre_jour"
            android:layout_gravity="end"
            android:layout_marginEnd="10dp" />

...
